--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -234,7 +234,7 @@ mixin logo()
 		a(href="#")
 			div
 				img(src="img/@2x/logo.png", alt="")
-			div.d-none.d-md-block
+			+e.DIV.text
 				+e.DIV.title Комплексные системы
 				| Продажа сейфов   и&nbsp;металлических&nbsp;стеллажей  с&nbsp;доставкой по&nbsp;Магнитогорску
 mixin search()
