--- a/sourse/pug/blocks/s-filter/_s-filter.pug
+++ b/sourse/pug/blocks/s-filter/_s-filter.pug
@@ -1,5 +1,5 @@
 mixin s-filter()
-	button.s-filter__btn.s-filter__btn--js.btn.btn-block.btn-primary.d-lg-none.mb-3.ttu(type='button')
+	button.s-filter__btn.s-filter__btn--js.d-lg-none.mb-3.ttu(type='button')
 		strong.d-none Свернуть фильтр
 		strong Фильтр товаров  
 	.s-filter-wrap.d-lg-block
