--- a/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
+++ b/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
@@ -21,22 +21,23 @@ mixin s-prod-head()
 									+e.img-wrap
 										+img()
 				.col-lg-4.col-md-6
-					h1 Сейф Aiko T-17 EL
-					+e.type Взломостойкий
-					p  #[strong Характеристики]
-					table
-						mixin tr(t1, t2)
-							tr
-								td= t1
-								td
-									strong= t2
-						+tr("Размер (ВхШхГ):","170х260х252 мм")
-						+tr("Внутренний размер (ВхШхГ):","170х260х252 мм")
-						+tr("Замки:","7,0 кг")
-						+tr("Вес:","ключевой")
-						+tr("Объем:","3,0 л")
-						+tr("Взломостойкость:","S1 класс")
-					p Корпус сейфа изготовлен из&nbsp;прочной стали,  которая покрыта порошковой эмалью.  Изделия можно крепить анкерным болтом  к&nbsp;полу и&nbsp;стене.
+					+e.content
+						h1 Сейф Aiko T-17 EL
+						+e.type Взломостойкий
+						p  #[strong Характеристики]
+						table
+							mixin tr(t1, t2)
+								tr
+									td= t1
+									td
+										strong= t2
+							+tr("Размер (ВхШхГ):","170х260х252 мм")
+							+tr("Внутренний размер (ВхШхГ):","170х260х252 мм")
+							+tr("Замки:","7,0 кг")
+							+tr("Вес:","ключевой")
+							+tr("Объем:","3,0 л")
+							+tr("Взломостойкость:","S1 класс")
+						p Корпус сейфа изготовлен из&nbsp;прочной стали,  которая покрыта порошковой эмалью.  Изделия можно крепить анкерным болтом  к&nbsp;полу и&nbsp;стене.
 				.col-lg-4
 					+e.availability(style="color: #8ac176;") В наличии
 					+b.s-prod-head-sidebar
