--- a/sourse/pug/blocks/s-prod-head/s-prod-head-images.scss
+++ b/sourse/pug/blocks/s-prod-head/s-prod-head-images.scss
@@ -38,6 +38,10 @@
 
 	}
 
+	&__slider--sm &__img-wrap {
+		cursor: pointer;
+	}
+
 	&__slider--sm {
 		margin-left: rem(-7px);
 		margin-right: rem(-7);
