--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -161,7 +161,7 @@
     }
   }
 
-  a {
+  &__text a {
     text-decoration: none !important;
     letter-spacing: rem(0.32px);
     line-height: 1;
@@ -174,6 +174,23 @@
 
     &:hover {
       border-color: #0b4190;
+    }
+  }
+
+  &__img-link {
+    img {
+      position: relative;
+
+      @include mt;
+      transform: scale(.9);
+    }
+
+    &:hover {
+      img {
+
+        transform: scale(1);
+      }
+
     }
   }
 }
