--- a/sourse/pug/blocks/form-wrap/form-wrap.pug
+++ b/sourse/pug/blocks/form-wrap/form-wrap.pug
@@ -132,20 +132,20 @@ mixin form-tabs2()
 mixin form-tabs-qwiz()
 	.tabs
 		+e.group
-			+e.group-title Как с вами связаться?
+			//- +e.group-title Как с вами связаться?
 			
 			.tabs__caption
-				.tabs__btn.active
+				.tabs__btn.tabs__btn--qwiz.active
 					+icon('viber')
 					| Viber
-				.tabs__btn
+				.tabs__btn.tabs__btn--qwiz
 					+icon('whatsapp')
 					| WhatsApp
-				.tabs__btn
+				.tabs__btn.tabs__btn--qwiz
 					+icon('telegram')
 					| Telegram
 					
-				.tabs__btn
+				.tabs__btn.tabs__btn--qwiz
 					+icon('email')
 					| Email
 
@@ -156,7 +156,7 @@ mixin form-tabs-qwiz()
 			.tabs__content
 				+input("+7 (999) 999-99-99","tel",'Введите whatsapp:',"whatsapp")
 			.tabs__content
-				+input("Ваш telegraml","text",'Введите telegram:',"telegram")(required)
+				+input("Ваш telegram","tel",'Введите telegram:',"telegram")(required)
  
 			.tabs__content
 				+input("Ваш email","email",'Введите email:',"email")
