--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -45,9 +45,10 @@
 
 	&__title {
 		@extend .h5;
-		color: #5d5d5d;
+		font-weight: normal;
+		// color: #5d5d5d;
 		display: block;
-		padding-bottom: rem(10);
+		padding-bottom: rem(19);
 
 		@include media-breakpoint-up(md) {
 
@@ -124,16 +125,27 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			position: relative;
 			@include mt;
+
+			&--qwiz {
+				@include media-breakpoint-down(xs) {
+					width: 50%;
+					margin-bottom: 0;
+				}
+
+			}
 
 			&:hover {
 
 				border-color: #398bff;
+				z-index: 2;
 			}
 
 			&.active {
 				border-color: #0075ff;
 				box-shadow: inset 0 0 0 1px #0075ff;
+				z-index: 2;
 
 				.icon {
 					color: #111111;
@@ -160,10 +172,10 @@
 
 	&__group-title {
 		@extend .h5;
-		color: #5d5d5d;
+		// color: #5d5d5d;
 		font-weight: 500;
 		line-height: 1.1;
-		padding-bottom: rem(23);
+		padding-bottom: rem(19);
 
 		@include media-breakpoint-up(md) {
 			text-align: left;
@@ -292,9 +304,10 @@
 			background-size: contain;
 			background-repeat: no-repeat;
 			background-position: center center;
-			background-image: url(../img/svg/tick.svg);
+			background-image: url(../img/svg/tick-black.svg);
 			position: absolute;
 			@include a-cent;
+			@include mt;
 			width: 80%;
 			height: 80%;
 			opacity: 0;
