--- a/sourse/pug/blocks/header-block/_header-block.scss
+++ b/sourse/pug/blocks/header-block/_header-block.scss
@@ -49,9 +49,21 @@
 
 		border-radius: $border-radius-lg;
 		background-color: #ffffff;
-		position: absolute;
-		top: rem(290);
-		left: 0;
+
+		@include media-breakpoint-up(md) {
+
+			position: absolute;
+
+			top: rem(290);
+			left: 0;
+			margin-left: 0;
+			margin-top: 0;
+		}
+
+		margin-top: rem(-20);
+
+		display: inline-block;
+		margin-left: 15px;
 		padding: rem(12) rem(19);
 		font-weight: 600;
 	}
@@ -80,8 +92,8 @@
 
 		margin-bottom: rem(30);
 
-		margin-left: rem(-90);
-		margin-right: rem(-160);
+		margin-left: rem(-20);
+		margin-right: rem(-20);
 	}
 
 	// 
@@ -131,9 +143,18 @@
 	background-color: #ffffff;
 	position: absolute;
 	top: rem(5);
-	left: 0;
-	width: rem(208);
-	padding: rem(40) 0 rem(30);
+
+	@include media-breakpoint-up(lg) {
+
+		width: rem(208);
+		padding: rem(40) 0 rem(30);
+		left: 0;
+	}
+
+	left: -20px;
+
+	width: rem(178);
+	padding: rem(20) 0 rem(20);
 
 	.icon {
 		font-size: rem(47);
