--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -46,31 +46,42 @@
 
  	@include media-breakpoint-up(lg) {
 
- 		max-width: rem(390);
+ 		max-width: rem(410);
  	}
+
+ 	@include media-breakpoint-up(md) {
+ 		margin-bottom: 0;
+
+ 	}
+
+ 	margin-bottom: rem(20);
+
+ 	&__text {
+ 		max-width: rem(275);
+ 	}
+
 
 
  	img {
  		flex-shrink: 0;
- 		@extend .res-i;
+ 		// @extend .res-i;
 
  		@include media-breakpoint-up(xl) {
 
  			margin-right: rem(38);
  		}
 
- 		@include media-breakpoint-up(md) {
+ 		@include media-breakpoint-up(md) {}
 
- 			margin-right: rem(18);
- 			max-width: none;
- 		}
+ 		max-width: none;
+
+ 		margin-right: rem(18);
  	}
 
  	a {
- 		@include media-breakpoint-up(md) {
+ 		@include media-breakpoint-up(md) {}
 
- 			display: flex;
- 		}
+ 		display: flex;
 
  		text-decoration: none !important;
  		@extend .text-secondary;
@@ -128,7 +139,12 @@
  }
 
  .contact-block {
- 	text-align: right;
+ 	@include media-breakpoint-up(md) {
+
+ 		text-align: right;
+ 	}
+
+
  	font-weight: 600;
 
  	// @include media-breakpoint-up(lg) {
@@ -139,7 +155,9 @@
 
  	&__tel {
  		@extend .h4;
- 		@extend .link-body;
+ 		// @extend .link-body;
+ 		color: $body-color !important;
+ 		text-decoration: none !important;
  		font-family: $default-font2, serif;
  		font-weight: 600;
  	}
@@ -230,10 +248,11 @@
  		padding-top: rem(45);
  	}
  }
+
  .inner-page {
-	 h1 {
-		@include media-breakpoint-down(sm) {
-			margin-top: 0;
-		}
-	}
+ 	h1 {
+ 		@include media-breakpoint-down(sm) {
+ 			margin-top: 0;
+ 		}
+ 	}
  }
