--- a/sourse/pug/blocks/s-catalog/item-prod.scss
+++ b/sourse/pug/blocks/s-catalog/item-prod.scss
@@ -2,6 +2,9 @@
 .item-prod {
 	box-shadow: rem(3px) rem(3px) rem(35px) rgba(154, 187, 206, 0.17);
 	background-color: #ffffff;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: rem(360);
 
 	@include media-breakpoint-up(xl) {
 
@@ -48,8 +51,7 @@
 		opacity: 0;
 		line-height: 1;
 		padding: rem(19) rem(10);
-		@include mt;
-
+		@include mt(.6);
 
 	}
 
