--- a/sourse/pug/blocks/s-category/_s-category.scss
+++ b/sourse/pug/blocks/s-category/_s-category.scss
@@ -55,7 +55,7 @@
 			height: 100%;
 			z-index: -1;
 			opacity: 0.3;
-			@include mt;
+			@include mt(.6);
 		}
 	}
 
@@ -119,6 +119,7 @@
 		font-weight: 300;
 		border-bottom: 1px dashed;
 		cursor: pointer;
+		@include mt;
 
 		&:hover {
 			border-color: transparent;
