--- a/sourse/pug/blocks/s-form/_s-form.scss
+++ b/sourse/pug/blocks/s-form/_s-form.scss
@@ -2,22 +2,41 @@
 .s-form2 {
 	background-color: #f7f7f7;
 
+	h5 {
+		font-weight: normal;
+		line-height: 1.4;
+		margin-bottom: rem(40);
+		max-width: rem(350);
+	}
+
+	&__head-text {
+		max-width: rem(490);
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 	.col-lg-7 {
 		align-self: flex-end
 	}
 
 	@extend .section-border;
 
-	@include media-breakpoint-up(lg) {
+	@include media-breakpoint-up(lg) {}
 
-		padding-bottom: 0 !important;
-	}
+	padding-bottom: 0 !important;
 
 	&__img-wrap {
 		margin-left: rem(15);
 		margin-right: rem(-15);
 
-		img {}
+		@include media-breakpoint-down(md) {
+			text-align: center;
+
+			img {
+				max-width: rem(450);
+				margin-left: -40px;
+			}
+		}
 	}
 
 	.section-title {
@@ -38,6 +57,7 @@
 	}
 
 	.form-wrap {
+		padding-bottom: rem(40);
 
 		.form-control,
 		&__input {
@@ -53,9 +73,13 @@
 		}
 
 		@include media-breakpoint-up(lg) {
-
-			max-width: rem(360);
+			// margin-left: 0;
 		}
+
+		// margin-left: auto;
+		// margin-right: auto;
+
+		max-width: rem(360);
 	}
 
 	&__label {
