--- a/sourse/pug/blocks/s-prod-head/_s-prod-head.scss
+++ b/sourse/pug/blocks/s-prod-head/_s-prod-head.scss
@@ -70,6 +70,10 @@
 		}
 	}
 
+	&__content {
+		max-width: rem(340);
+	}
+
 	@include media-breakpoint-up(xl) {}
 
 	@include media-breakpoint-up(lg) {}
@@ -100,7 +104,11 @@
 
 	@include media-breakpoint-down(lg) {}
 
-	@include media-breakpoint-down(md) {}
+	@include media-breakpoint-down(md) {
+		// margin-left: auto;
+		// margin-right: auto;
+		// max-width: rem(440);
+	}
 
 	@include media-breakpoint-down(sm) {}
 
