--- a/sourse/pug/blocks/s-prod-head/s-prod-head-sidebar.scss
+++ b/sourse/pug/blocks/s-prod-head/s-prod-head-sidebar.scss
@@ -4,6 +4,7 @@
 	background-color: #f7f7f7;
 	padding: rem(25) rem(25);
 	margin-bottom: rem(22);
+	max-width: rem(380);
 
 	&__price {
 		@include rfs(rem(24)) // font-size: rem(24px);
