--- a/sourse/pug/blocks/s-you-watched/_s-you-watched.pug
+++ b/sourse/pug/blocks/s-you-watched/_s-you-watched.pug
@@ -7,10 +7,10 @@ mixin s-you-watched()
 				
 			.row
 				- for (var x = 0; x < 6; x++)
-					+e.col.col-lg-4.col-md-6
+					+e.col.col-xl-4.col-lg-3.col-sm-4
 						+e.item
 							.row
-								.col-md-6.col-auto
+								.col-xl-6.col-sm-12.col-auto
 									+e.img-wrap(href="#") 
 										img.res-i.lazy(src="#" data-src="img/@2x/prod-1.jpg" , alt="") 
 								.col
