--- a/sourse/pug/blocks/s-step1/_s-step1.pug
+++ b/sourse/pug/blocks/s-step1/_s-step1.pug
@@ -2,7 +2,7 @@ mixin s-step1()
 	// start s-step1
 	+b.s-step1#s-step1&attributes(attributes)
 		.container
-			+b.order-steps.row.text-center
+			+b.order-steps.row.text-center.align-items-center
 				.col-sm-4
 					a.active(href='#') Контактные данные
 				.col-sm-4
