--- a/sourse/pug/blocks/s-step2/_s-step2.pug
+++ b/sourse/pug/blocks/s-step2/_s-step2.pug
@@ -2,7 +2,7 @@ mixin s-step2()
 	// start s-step2
 	+b.s-step2#s-step2&attributes(attributes)
 		.container
-			+b.order-steps.row.text-center
+			+b.order-steps.row.text-center.align-items-center
 				.col-sm-4
 					a(href='#') Контактные данные
 				.col-sm-4
