--- a/sourse/pug/blocks/s-step3/_s-step3.pug
+++ b/sourse/pug/blocks/s-step3/_s-step3.pug
@@ -2,7 +2,7 @@ mixin s-step3()
 	// start s-step3
 	+b.s-step3#s-step3&attributes(attributes)
 		.container
-			+b.order-steps.row.text-center
+			+b.order-steps.row.text-center.align-items-center
 				.col-sm-4
 					a(href='#') Контактные данные
 				.col-sm-4
