--- a/sourse/pug/blocks/s-step2/_s-step2.scss
+++ b/sourse/pug/blocks/s-step2/_s-step2.scss
@@ -23,27 +23,26 @@
 		border: 1px solid #e9e9e9;
 		background-color: #f5f5f5;
 		letter-spacing: 0.44px;
-		color: #a2a2a2;
 		padding: rem(15);
-		padding-bottom: rem(10);
+		padding-bottom: rem(12);
 		margin-bottom: rem(35);
-
 		a {
-			@extend h4;
+			font-size: rem(17);
+			@include media-breakpoint-up(lg){
+				font-size: rem(22);
+			}
 			display: inline-block;
 			color: #a2a2a2;
 			border-bottom: 1px dashed transparent;
-
 			@include media-breakpoint-down(sm) {
 				padding-top: rem(10);
+				padding-bottom: rem(10);
 			}
-
 			&:hover {
 				text-decoration: none;
-				border-bottom: 1px dashed $secondary;
+				border-bottom: 1px dashed transparent;
 			}
 		}
-
 		.active {
 			color: $body-color;
 		}
@@ -137,7 +136,10 @@
 	}
 
 	.contact-information {
-
+		@include media-breakpoint-down(md){
+		max-width: rem(555);
+		margin: 0 auto;
+		}
 		margin-bottom: rem(30);
 
 		h4 {
