--- a/sourse/pug/blocks/s-thanks/_s-thanks.scss
+++ b/sourse/pug/blocks/s-thanks/_s-thanks.scss
@@ -7,18 +7,10 @@
 			position: relative;
 			// max-width: rem(700);
 			img {
-				@include media-breakpoint-up(xl) {
-					left:  18%;
-				}
-				@include media-breakpoint-up(lg) {
-					left: 10%;
-				}
-				@include media-breakpoint-up(md) {
-					position: absolute;
-					left:  5%;
-				}
+
 				margin: 0 auto;
 				margin-top: rem(5);
+				margin-bottom: rem(5);
 				background-color: $accent;
 				border-radius: 50%;
 				max-width: rem(25);
