--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -90,7 +90,7 @@ $output-bourbon-deprecation-warnings: false;
       position: relative;
       padding-bottom: rem(3);
       border-bottom: 1px solid #dedede;
-
+      @include mt(1);
       &::after {
         content: '';
         width: rem(10);
@@ -105,6 +105,7 @@ $output-bourbon-deprecation-warnings: false;
 
       &:hover {
         text-decoration: none;
+        border-bottom: 1px solid transparent;
       }
     }
   }
