--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -42,7 +42,7 @@ mixin s-form2()
 
 				+man()
 				.col
-					+e.head-text
+					+e.head-text.corrective-margin
 						h2 Есть вопросы <br>по&nbsp;доставке и&nbsp;сборке?
 						h5 Напишите ваш вопрос
 						+form-wrap("Получить каталог и прайс")
