edit small mistakes

--- a/sourse/pug/blocks/s-filter/_s-filter.scss
+++ b/sourse/pug/blocks/s-filter/_s-filter.scss
@@ -256,6 +256,7 @@
 
 	&__btn--js {
 		// border: 2px solid $primary !important;
+		// margin-top: rem();
 		border: 2px solid #398bff;
 		text-transform: none;
 		color: $primary;
