--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -194,3 +194,53 @@
     }
   }
 }
+
+.develop-link {
+  display: inline-block;
+  position: relative;
+  transform: scale(.96);
+  backface-visibility: visible;
+
+  &:hover {
+    transform: scale(1);
+  }
+
+  &__panel {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 217px;
+    height: 57px;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+
+    &::before {
+      content: '';
+      box-shadow: 0 0 19px 2px rgba(234, 234, 234, 0.82);
+      background-color: #ffffff;
+      position: absolute;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
+      border-radius: rem(10);
+      transform: skewX(-10deg);
+    }
+
+    .img-1 {
+      width: (19px);
+      height: (21px);
+      flex-shrink: 0;
+      margin-right: 15px;
+    }
+
+    .img-2 {
+      flex-shrink: 0;
+      width: 138px;
+      height: 28px;
+      margin-right: 0;
+    }
+  }
+
+
+}
