--- a/sourse/pug/blocks/s-form/_s-form.scss
+++ b/sourse/pug/blocks/s-form/_s-form.scss
@@ -173,8 +173,8 @@
 
 		.s-form__label {
 			// Запись не правильная
-			left: rem(35);
-			top: rem(615); //ОЧЕНЬ СИЛЬНО СОМНЕВАЮСЬ
+			// left: rem(35);
+			// top: rem(615); //ОЧЕНЬ СИЛЬНО СОМНЕВАЮСЬ
 
 			&-prof {
 				padding-left: rem(55);
