--- a/sourse/pug/blocks/s-step2/_s-step2.pug
+++ b/sourse/pug/blocks/s-step2/_s-step2.pug
@@ -48,9 +48,9 @@ mixin s-step2()
 						textarea.address(placeholder="г. Магнитогосрк, 50 Лет Октября пр., д.118, кв.124")
 						h5 Напишите комментарий, если хотите
 						textarea(placeholder="Например, можно ли заказать доставку в нерабочее время")
-			.row.justify-content-center
+			.row.justify-content-center.bottom-button
 				.col-lg-5
-					+b.form-wrap.bottom-button
+					+b.form-wrap
 						+e.btn(type="submit") Перейти к подтверждению заказа
 
 	// end s-step2
