--- a/sourse/pug/blocks/s-step2/_s-step2.scss
+++ b/sourse/pug/blocks/s-step2/_s-step2.scss
@@ -1,28 +1,26 @@
 // start .s-step2
 .s-step2 {
-	padding-top: rem(50);
-	padding-bottom: rem(50);
 
-	// start .s-step2
-	.s-step2 {
 		padding-top: rem(50);
 		padding-bottom: rem(57);
 
 		.bottom-button {
 			.form-wrap__btn {
-
+				@include media-breakpoint-down(lg){
+					margin-left: 0;
+					margin-right: 0;
+				}
 				max-width: rem(407);
 				min-height: rem(75);
-				letter-spacing: 0.4px;
-
+				letter-spacing: rem(0.4);
+				
 			}
 		}
-	}
 
 	.order-steps {
 		border: 1px solid #e9e9e9;
 		background-color: #f5f5f5;
-		letter-spacing: 0.44px;
+		letter-spacing: 0.44;
 		padding: rem(15);
 		padding-bottom: rem(12);
 		margin-bottom: rem(35);
@@ -137,8 +135,8 @@
 
 	.contact-information {
 		@include media-breakpoint-down(md){
-		max-width: rem(555);
-		margin: 0 auto;
+			max-width: rem(555);
+		// margin: 0 auto;
 		}
 		margin-bottom: rem(30);
 
@@ -182,7 +180,7 @@
 			}
 
 			&__title {
-				text-align-last: left;
+				text-align: left;
 			}
 		}
 	}
