--- a/sourse/pug/blocks/s-step3/_s-step3.scss
+++ b/sourse/pug/blocks/s-step3/_s-step3.scss
@@ -21,7 +21,7 @@
 	.order-steps {
 		border: 1px solid #e9e9e9;
 		background-color: #f5f5f5;
-		letter-spacing: 0.44px;
+		letter-spacing: px(0.44);
 		padding: rem(15);
 		padding-bottom: rem(12);
 		margin-bottom: rem(35);
@@ -50,7 +50,6 @@
 	.final-data {
 		border-radius: rem(5);
 		max-width: rem(370);
-		margin: 0 auto;
 		background-color: #f4f5f7;
 		margin-bottom: rem(30);
 		padding-left: rem(15);
@@ -260,7 +259,6 @@
 
 	.form-wrap {
 		max-width: rem(250);
-		margin: 0 auto;
 		@include media-breakpoint-up(lg) {
 			margin-left: rem(20);
 		}
