--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -46,7 +46,7 @@ mixin s-form2()
 						h2 Есть вопросы <br>по&nbsp;доставке и&nbsp;сборке?
 						h5 Напишите ваш вопрос
 						+form-wrap("Получить каталог и прайс")
-							textarea.form-control
+							+input(null ,'textarea')(class="form-control")
 							+form-tabs2() 
 							//- +inputName()
 							+e.btn(type="submit") Задать вопрос
