--- a/sourse/pug/blocks/s-step1/_s-step1.scss
+++ b/sourse/pug/blocks/s-step1/_s-step1.scss
@@ -6,7 +6,7 @@
 		.order-steps {
 			border: 1px solid #e9e9e9;
 			background-color: #f5f5f5;
-			letter-spacing: 0.44px;
+			letter-spacing: rem(0.44);
 			padding: rem(15);
 			padding-bottom: rem(12);
 			margin-bottom: rem(35);
@@ -53,11 +53,11 @@
 					margin-left: rem(57);
 				}
 				// margin-bottom: rem(50);
-				box-shadow: 1px 4px 35px rgba(154, 187, 206, 0.17);
+				box-shadow: 1px rem(4) rem(35) rgba(154, 187, 206, 0.17);
 				border-radius: 2px;
 				p {
 					font-size: rem(22);
-					letter-spacing: 0.44px;
+					letter-spacing: rem(0.44);
 					line-height: 1.36;
 					color: #494949;
 				}
