--- a/sourse/pug/blocks/s-thanks/_s-thanks.scss
+++ b/sourse/pug/blocks/s-thanks/_s-thanks.scss
@@ -27,7 +27,7 @@
 		p {
 			max-width: rem(660);
 			line-height: 1.5;
-			letter-spacing: 0.4px;
+			letter-spacing: rem(0.4);
 			font-size: rem(20);
 			text-align: center;
 			margin: auto;
@@ -72,7 +72,7 @@
 				color: $body-color;
 				font-weight: 700;
 				font-size: rem(22);
-				letter-spacing: 0.44px;
+				letter-spacing: rem(0.44);
 				&:hover {
 					text-decoration: none;
 					color: #398bff;
