--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -4,7 +4,7 @@ mixin footer()
 			.row
 				+logo()(class="col-lg-5   col")
 				.col-auto.order-sm-last
-					+contact-block()
+					+contact-block("t")
 				.col-sm
 					+e.menu
 						ul
