--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -104,6 +104,10 @@
 			text-align: center;
 		}
 
+		&__title {
+			font-weight: 500;
+		}
+
 		&__title,
 		&__text--sm {
 			text-align: center !important;
@@ -111,6 +115,12 @@
 
 		&__polite {
 			text-align: center;
+		}
+
+		&__btn {
+			max-width: 100%;
+			width: 100%;
+			margin-top: rem(26);
 		}
 	}
 
