--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -10,7 +10,7 @@ mixin man()
 				+e.label-prof руководитель 
 mixin s-form()
 	// start s-form
-	+b.s-form.section.block-with-lazy#s-form&attributes(attributes)
+	+b.s-form--main.section.block-with-lazy#s-form&attributes(attributes)
 		.container
 			.row
 
