--- a/sourse/pug/blocks/s-qwiz/_s-qwiz.pug
+++ b/sourse/pug/blocks/s-qwiz/_s-qwiz.pug
@@ -63,6 +63,8 @@ mixin s-qwiz()
 							+item("80","Вопрос 4 из 4","Выберите сумму, которую готовы потратить на покупку сейфа?")
 								+radio("До 5000 Р","qwiz-price")(class="col-sm-6")
 								+radio("От 5.000 до 10.000 Р","qwiz-price")(class="col-sm-6")
+								+radio("От 10.000 до 20.000 Р","qwiz-price")(class="col-sm-6")
+								+radio("Свыше 20.000 Р","qwiz-price")(class="col-sm-6")
 						.col-lg-auto.d-none.d-lg-block
 							+b.qwiz-sidebar
 								+e.header
