--- a/sourse/pug/blocks/top-line/_top-line.scss
+++ b/sourse/pug/blocks/top-line/_top-line.scss
@@ -117,12 +117,16 @@
       // justify-content: flex-end;
       justify-content: center;
     }
+
+
   }
 
   @include media-breakpoint-down(sm) {
 
 
-
+    .logo__title {
+      display: none;
+    }
 
     padding-bottom: rem(20);
   }
