--- a/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
+++ b/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
@@ -39,33 +39,34 @@ mixin s-prod-head()
 							+tr("Взломостойкость:","S1 класс")
 						p Корпус сейфа изготовлен из&nbsp;прочной стали,  которая покрыта порошковой эмалью.  Изделия можно крепить анкерным болтом  к&nbsp;полу и&nbsp;стене.
 				.col-lg-4
-					+e.availability(style="color: #8ac176;") В наличии
-					+b.s-prod-head-sidebar
-						+e.price 2000 Р*
-						ul
-							li
-								+icon('shipped')
-								strong Доставка 
-								| по&nbsp;Магнитогорску в&nbsp;день оплаты
-							
-							li
-								+icon('credit-card')
-								strong Оплата
-								| Безналично: банковской картой, по&nbsp;выставленному счету.При покупке со&nbsp;склада&nbsp;&mdash; наличными или безналично.
-							
-							li
-								+icon('guarantee')
-								strong Гарантия
-								| На&nbsp;корпус сейфы 5&nbsp;лет, на&nbsp;замки 1&nbsp;год.
-							
-							li
-								+icon('vault')
-								strong Помощь с установкой
-								| Если нужно, поможем установить  или встроить 
-						+e.btn(type="button")
-							+icon('cart')
-							| В корзину
-					+e.footer-text *При оформлении заказа  уточняйте&nbsp;цену по&nbsp;т: #[a(href="tel:8(3519)22-00-22") 8 (3519) 22-00-22]
+					+e.sidebar-wrap
+						+e.availability(style="color: #8ac176;") В наличии
+						+b.s-prod-head-sidebar
+							+e.price 2000 Р*
+							ul
+								li
+									+icon('shipped')
+									strong Доставка 
+									| по&nbsp;Магнитогорску в&nbsp;день оплаты
+								
+								li
+									+icon('credit-card')
+									strong Оплата
+									| Безналично: банковской картой, по&nbsp;выставленному счету.При покупке со&nbsp;склада&nbsp;&mdash; наличными или безналично.
+								
+								li
+									+icon('guarantee')
+									strong Гарантия
+									| На&nbsp;корпус сейфы 5&nbsp;лет, на&nbsp;замки 1&nbsp;год.
+								
+								li
+									+icon('vault')
+									strong Помощь с установкой
+									| Если нужно, поможем установить  или встроить 
+							+e.btn(type="button")
+								+icon('cart')
+								| В корзину
+						+e.footer-text *При оформлении заказа  уточняйте&nbsp;цену по&nbsp;т: #[a(href="tel:8(3519)22-00-22") 8 (3519) 22-00-22]
 	// end s-prod-head
 
 mixin s-prod-head-basket()
