--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -45,6 +45,10 @@
 	font-size:(368.03/10)*1rem;
 	width:(368.03/368.03)*1em;
 }
+.icon-loupe2 {
+	font-size:(500/10)*1rem;
+	width:(500/500)*1em;
+}
 .icon-refresh {
 	font-size:(491.24/10)*1rem;
 	width:(491.24/491.24)*1em;
@@ -72,6 +76,10 @@
 .icon-telephone {
 	font-size:(480.56/10)*1rem;
 	width:(480.56/480.56)*1em;
+}
+.icon-telephone2 {
+	font-size:(500/10)*1rem;
+	width:(500/500)*1em;
 }
 .icon-vault {
 	font-size:(500/10)*1rem;
