--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -2,7 +2,7 @@ mixin footer()
 	+b.FOOTER.footer.block-with-lazy
 		.container
 			.row
-				+logo()(class="col-lg-5   col")
+				+logo()(class="col-lg-5   col-sm")
 				.col-auto.order-sm-last
 					+contact-block("t")
 				.col-sm
