--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -161,6 +161,7 @@
       }
     }
 
+    .logo__title,
     .logo__text-inner {
       display: none;
     }
@@ -221,6 +222,7 @@
   position: relative;
   transform: scale(.96);
   backface-visibility: visible;
+  margin-top: rem(15);
 
   &:hover {
     transform: scale(1);
