--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -263,8 +263,8 @@ mixin contact-block(t)
 				+icon("whatsapp")
 			if !t
 				+e.item--tel.d-lg-none(href="tel:+7(3519)22-00-00")
-					+icon("tel")
+					+icon("telephone2")
 			
 			if !t
 				+e.item--search.d-lg-none(type="button")
-					+icon("search")
+					+icon("loupe2")
