--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -28,6 +28,10 @@
 		resize: none;
 		letter-spacing: rem(0.4px);
 		font-family: "Open Sans";
+
+		@include media-breakpoint-down(xs) {
+			font-size: 1rem;
+		}
 	}
 
 	&__btn {
@@ -40,7 +44,7 @@
 		@extend .btn-block;
 		margin-left: auto;
 		margin-right: auto;
-		max-width: rem(358);
+		// max-width: rem(358);
 	}
 
 	&__title {
