--- a/sourse/pug/blocks/s-error/_s-error.scss
+++ b/sourse/pug/blocks/s-error/_s-error.scss
@@ -1,116 +1,150 @@
+// start .s-error
+.s-error {
+	padding-top: rem(112);
 
-	// start .s-error
-	.s-error {
-		padding-top: rem(112);
-		&__img-wrap {
-			margin: 0 auto;
-			padding-bottom: rem(77);
-			max-width: rem(544);
-			img{
-				width: 100%;
-			}
+	&__img-wrap {
+		margin: 0 auto;
+		padding-bottom: rem(77);
+		max-width: rem(544);
+
+		img {
+			width: 100%;
 		}
-		h2 {
-			padding-bottom: rem(13);
-			letter-spacing: 0.66px;
-		}
-		h5 {
-			padding-bottom: rem(74);
-			letter-spacing: 0.4px;
-		}
-		h4 {
-			// padding-top: rem(7);
-			padding-bottom: rem(18);
-		}
+	}
+
+	h2 {
+		padding-bottom: rem(13);
+		letter-spacing: 0.66px;
+	}
+
+	h5 {
+		padding-bottom: rem(74);
+		letter-spacing: 0.4px;
+
 		a {
-			text-decoration: underline;
-			&:hover {
-				color: #398bff;
-				// text-decoration: none;
+			display: inline-block;
+		}
+	}
+
+	h4 {
+		// padding-top: rem(7);
+		padding-bottom: rem(18);
+	}
+
+	a {
+		text-decoration: underline;
+		display: inline-block;
+
+		&:hover {
+			color: #398bff;
+			// text-decoration: none;
+		}
+	}
+
+	.form-search {
+		margin: 0 auto;
+		max-width: rem(626);
+		margin-bottom: rem(42);
+
+		@include media-breakpoint-down(lg) {
+			display: block !important;
+		}
+
+		&__btn {
+			color: #0b4392;
+			top: 50%;
+
+			svg {
+				font-size: rem(22);
 			}
 		}
-		.form-search {
-			margin: 0 auto;
-			max-width: rem(626);
-			margin-bottom: rem(42);
-			@include media-breakpoint-down(lg) {
-				display: block !important;
-			}
-			&__btn {
-				color: #0b4392;
-				top: 50%;
-				svg {
-					font-size: rem(22);
-				}
-			}
-			input {
-				line-height: 2;
-				padding-left: rem(28);
-			}
+
+		input {
+			line-height: 2;
+			padding-left: rem(28);
 		}
+	}
+
 	@include media-breakpoint-up(xl) {}
+
 	@include media-breakpoint-up(lg) {}
+
 	@include media-breakpoint-up(md) {}
+
 	@include media-breakpoint-up(sm) {}
+
 	@include media-breakpoint-up(xs) {}
-	
+
 	//
-	@include media-breakpoint-between(md, xl) { }
-	
-	
+	@include media-breakpoint-between(md, xl) {}
+
+
 	//
 	@include media-breakpoint-only(xs) {}
+
 	@include media-breakpoint-only(sm) {}
+
 	@include media-breakpoint-only(md) {}
+
 	@include media-breakpoint-only(lg) {}
+
 	@include media-breakpoint-only(xl) {}
-	
+
 	//
 	@include media-breakpoint-down(xl) {}
+
 	@include media-breakpoint-down(lg) {}
+
 	@include media-breakpoint-down(md) {}
+
 	@include media-breakpoint-down(sm) {}
-	@include media-breakpoint-down(xs) {} 
+
+	@include media-breakpoint-down(xs) {}
 
 	ul {
-    display: flex;
-    @include roww(5);
-    padding-top: rem(15);
+		display: flex;
+		@include roww(5);
+		padding-top: rem(15);
 
 
-    justify-content: center;
+		justify-content: center;
 
-    a {
-      text-decoration: none !important;
-      border-bottom: 1px solid;
-      @extend .text-secondary;
-      font-weight: 300;
-      font-size: rem(14);
+		a {
+			text-decoration: none !important;
+			border-bottom: 1px solid;
+			@extend .text-secondary;
+			font-weight: 300;
+			font-size: rem(14);
 
-      &:hover {
-        border-color: transparent;
-      }
-    }
-  }
+			&:hover {
+				border-color: transparent;
+			}
+		}
+	}
 
-  li {
-    list-style-type: none;
+	li {
+		list-style-type: none;
 
-  }
-} // end.s-error
+	}
+}
+
+// end.s-error
 
 .not-found {
 	@include media-breakpoint-up(md) {
 		padding-bottom: rem(75);
 	}
+
 	@include media-breakpoint-down(lg) {
 		padding-top: rem(40);
 	}
+
 	h4 {
 		padding-bottom: rem(40);
 	}
+
 	.form-search {
-		&__btn{
+		&__btn {
 			top: 27%;
 		}
 	}
