--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -140,9 +140,13 @@
   @include media-breakpoint-down(lg) {}
 
   @include media-breakpoint-down(md) {
+    .contact-block {
+      margin-top: 10px;
+    }
+
     .messanger-block {
       justify-content: initial;
-      margin-top: 10px;
+      // margin-top: 10px;
       margin-bottom: 10px;
     }
 
